Bug 415850 - "Move message to folder" dialog does not accept certain characters
Summary: "Move message to folder" dialog does not accept certain characters
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 5.13.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-03 19:20 UTC by David de Cos
Modified: 2020-01-15 08:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.13.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David de Cos 2020-01-03 19:20:48 UTC
SUMMARY
"Move message to folder" dialog (activated by pressing "M") does not accept characters such as "á", "è", "ö".

STEPS TO REPRODUCE
1. Select a message and press "M" to open the "Move message to folder" dialog.
2. Start typing the name of a folder that has characters such as "á", "è", "ö" in it.
3. Characters like the ones addressed in the previous point are not typed.

ADDITIONAL INFORMATION
This seems to have happened in KMail 1, and apparently was fixed 12 years ago (see Bug 133092). Since KMail 1 was a different product, and doesn't even appear in the product list when submitting a bug, I'm reporting it as a new bug rather than a regression.
Comment 1 Laurent Montel 2020-01-14 12:25:15 UTC
Git commit e727ec8c7562ba49a09c7da5375c21ae52470c2f by Laurent Montel.
Committed on 14/01/2020 at 12:24.
Pushed by mlaurent into branch 'release/19.12'.

Fix: Bug 415850 - "Move message to folder" dialog does not accept certain characters

For the moment using a lineedit
FIXED-IN: 5.13.2

M  +2    -1    src/folder/folderselectiondialog.cpp

https://commits.kde.org/mailcommon/e727ec8c7562ba49a09c7da5375c21ae52470c2f
Comment 2 David Faure 2020-01-15 08:16:49 UTC
Git commit 081d57ce53d0a4cdad72f3e77db91ac0e139fdae by David Faure.
Committed on 15/01/2020 at 08:16.
Pushed by dfaure into branch 'release/19.12'.

Fix support for dead keys in foldertreewidget filtering

Summary:
FIXED-IN: 5.13.2

Test Plan:
I can jump to a folder called abédêf with FR layout.
Doesn't seem to work with compose key though.

Reviewers: mlaurent

Reviewed By: mlaurent

Differential Revision: https://phabricator.kde.org/D26682

M  +1    -2    src/folder/folderselectiondialog.cpp
M  +6    -0    src/folder/foldertreewidget.cpp

https://commits.kde.org/mailcommon/081d57ce53d0a4cdad72f3e77db91ac0e139fdae