Fix: Bug 415850 - "Move message to folder" dialog does not accept certain characters

For the moment using a lineedit
BUG: 415850
FIXED-IN: 5.13.2