src/folder/folderselectiondialog.cpp
@@ -80,7 +80,8 @@ FolderSelectionDialog::FolderSelectionDialog(QWidget *parent, SelectionFolderOpt
         KGuiItem::assign(d->mUser1Button, KGuiItem(i18n("&New Subfolder..."), QStringLiteral("folder-new"),
                                                    i18n("Create a new subfolder under the currently selected folder")));
     }
-    FolderTreeWidget::TreeViewOptions opt = FolderTreeWidget::None;
+    FolderTreeWidget::TreeViewOptions opt = FolderTreeWidget::DontKeyFilter;
+    opt |= FolderTreeWidget::UseLineEditForFiltering;
     if (options & FolderSelectionDialog::ShowUnreadCount) {
         opt |= FolderTreeWidget::ShowUnreadCount;
     }
